--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "css-build": "node-sass --omit-source-map-url src/assets/css/index.scss src/assets/css/index.css",
+    "css-build-prod": "node-sass --omit-source-map-url src/assets/css/index.scss public/css/index.css",
+    "css-watch": "npm run css-build -- --watch",
+
+    "start": "react-scripts start css-watch",
+    "build": "react-scripts css-build-prod build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -43,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "bulma": "^0.9.4",
+    "node-sass": "^7.0.3"
+  },
+  "main": "public/assets/css/index.scss"
 }
