--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -23,7 +24,6 @@
     "css-build": "node-sass --omit-source-map-url src/assets/css/index.scss src/assets/css/index.css",
     "css-build-prod": "node-sass --omit-source-map-url src/assets/css/index.scss public/css/index.css",
     "css-watch": "npm run css-build -- --watch",
-
     "start": "react-scripts start css-watch",
     "build": "react-scripts css-build-prod build",
     "test": "react-scripts test",
